<resources>
    <string name="tv_size14">textSize14(静态)</string>
    <string name="tv_size20">textSize20(静态)</string>
    <string name="tv_color_red">colorRed(静态)</string>
    <string name="tv_color_blue">textSize14(静态)</string>
    <string name="tv_size14_d">textSize14(动态)</string>
    <string name="tv_size20_d">textSize20(动态)</string>
    <string name="tv_color_red_d">colorRed(动态)</string>
    <string name="tv_color_blue_d">colorBlue(动态)</string>

    <string name="app_name">MentalArithmetic</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_to_you">Welcome to you</string>
    <string name="main_line_test">在线测验</string>
    <string name="log_have_no_account">还没有账户？点此去注册</string>
    <string name="log_btn">登录</string>
    <string name="nextQuestion">下一题</string>
    <string name="chip_pre_text">上一题</string>
    <string name="exer_item_start">开始练习</string>
    <string name="exer_item_exp_num">习题数量</string>
    <string name="submit">提交</string>
    <string name="print_exp">打印习题</string>
    <string name="exer_goal">分数:</string>
    <string name="reset">再试一遍</string>
    <string name="mis_list">错题集</string>
    <string name="agree">已阅读并且同意《相关协议》</string>
    <string name="input_account">请输入账号</string>
    <string name="register">注册</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="check_pasword">请确认密码</string>
    <string-array name="grade1">
        <item>10以内加法</item>
        <item>10以内减法</item>
        <item>10以内加减法(总复习)</item>
    </string-array>
    <string-array name="grade2">
        <item>20以内加法</item>
        <item>20以内减法</item>
        <item>20以内加减法(总复习)</item>
        <item>表内乘法</item>
    </string-array>
    <string-array name="grade3">
        <item>千以内加法</item>
        <item>千以内减法</item>
        <item>千以内加减法(总复习)</item>
        <item>两位数乘两位数</item>
        <item>除数是一位数的除法</item>
    </string-array>
    <string-array name="grade4">
        <item>万以内加法</item>
        <item>万以内减法</item>
        <item>万以内加减法(总复习)</item>
        <item>三位数乘两位数</item>
    </string-array>
    <string-array name="grade5">
        <item>小数乘整数</item>
        <item>小数乘小数</item>
        <item>小数乘法(总复习)</item>
        <item>被除数是整数，除数是小数的除法</item>
        <item>小数除以小数</item>
    </string-array>
    <string-array name="grade6">
        <item>小数乘整数</item>
        <item>小数乘小数</item>
        <item>小数乘法(总复习)</item>
        <item>被除数是整数，除数是小数的除法</item>
        <item>小数除以小数</item>
    </string-array>
</resources>