<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_size14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="68dp"
        android:text="@string/tv_size14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_size20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/tv_size20"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/tv4"
        app:layout_constraintStart_toStartOf="@+id/tv_size20_d"
        app:layout_constraintTop_toBottomOf="@+id/tv_size14" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="48dp"
        android:text="@string/tv_color_red"
        android:textSize="14sp"
        android:textColor="#ED0505"
        app:layout_constraintStart_toStartOf="@+id/tv_size20"
        app:layout_constraintTop_toBottomOf="@+id/tv_size20" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="216dp"
        android:layout_marginTop="49dp"
        android:text="@string/tv_color_blue"
        android:textSize="20sp"
        android:textColor="#05A2E9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv3" />

    <TextView
        android:id="@+id/tv_size14_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="54dp"
        android:text="@string/tv_size14_d"
        app:layout_constraintBottom_toTopOf="@+id/tv_size20_d"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_size20_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="53dp"
        android:text="@string/tv_size20_d"

        app:layout_constraintBottom_toTopOf="@+id/tv_color_red_d"
        app:layout_constraintEnd_toStartOf="@+id/tv_color_blue_d"
        app:layout_constraintStart_toStartOf="@+id/tv_size14" />

    <TextView
        android:id="@+id/tv_color_red_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginBottom="38dp"
        android:text="@string/tv_color_red_d"
        app:layout_constraintBottom_toTopOf="@+id/tv_color_blue_d"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_color_blue_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="141dp"
        android:text="@string/tv_color_blue_d"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_color_red_d" />

</androidx.constraintlayout.widget.ConstraintLayout>