<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:background="@drawable/log_back"
    android:fitsSystemWindows="true">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginTop="292dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:cardCornerRadius="16dp"
        app:strokeColor="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="12dp">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/editAccountStyle"
                android:hint="@string/input_account"
                android:paddingBottom="2dp"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/baseline_person_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="1dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/editAccountStyle"
                android:layout_marginTop="12dp"
                android:hint="@string/input_password"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/key"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="1dp" />
                <!--解决输入文本被遮挡-->

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                style="@style/textTitleStyle"
                android:fontFamily="@font/alfa_slab_one"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="#1EAA7D"
                android:stateListAnimator="@animator/btn_click"
                android:text="@string/log_btn" />

            <TextView
                android:id="@+id/login_tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_have_no_account" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:layout_width="280dp"
        android:layout_height="235dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/study"
        android:layout_marginTop="33dp"/>
</RelativeLayout>