<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true"
    android:background="?attr/colorPrimary">
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_profile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        app:shapeAppearance="@style/roundedCornerImageStyle"
        android:src="@drawable/teacher"/>
    <LinearLayout
        android:id="@+id/linear_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/img_profile"
        android:layout_marginTop="20dp">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="晚上好,同学!"
            style="@style/textTitleStyle"
            android:layout_gravity="center"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/font"
            style="@style/textTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fzktpop"
            android:text="@string/welcome_to_you" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linear_top"
        android:layout_alignParentStart="true"
        android:background="@drawable/circle_back"
        android:backgroundTint="#FFFFFF">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_test"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="28dp"
            android:padding="18dp"
            app:cardBackgroundColor="?attr/colorTertiary"
            app:cardCornerRadius="16dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:orientation="vertical"
                android:padding="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/hwhb"
                    android:text="@string/main_line_test"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/spinner_level"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:gravity="center" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/enter"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/enter"
                    android:stateListAnimator="@animator/btn_click" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_test">

            <RelativeLayout
                android:id="@+id/rel1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="28dp">

                <RelativeLayout
                    android:id="@+id/rel_office_ifm"
                    android:layout_width="160dp"
                    android:layout_height="100dp"
                    android:background="@drawable/circle_back"
                    android:backgroundTint="#4DD0E1"
                    android:stateListAnimator="@animator/btn_click">
                    <TextView
                        android:id="@+id/tv_exa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img1"
                        android:layout_centerHorizontal="true"
                        android:text="练习记录"
                        android:textColor="#314DE4"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/img1"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="6dp"
                        android:src="@drawable/exam"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rel_mis_list"
                    android:layout_width="160dp"
                    android:layout_height="100dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/circle_back"
                    android:backgroundTint="#ED8BB2">

                    <TextView
                        android:id="@+id/tv_incorrect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img2"
                        android:layout_centerInParent="true"
                        android:text="@string/mis_list"
                        android:textColor="#EB317B"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <ImageView
                        android:id="@+id/img2"
                        android:layout_width="80dp"
                        android:layout_height="64dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/incorect"
                        android:stateListAnimator="@animator/btn_click" />
                </RelativeLayout>
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="220dp"
        android:layout_height="306dp"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="-24dp"
        android:src="@drawable/brainy" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_item_menu"
        app:labelVisibilityMode="selected"
        app:itemActiveIndicatorStyle="@style/Custom.Indicator"
        app:itemPaddingBottom="10dp"
        app:itemIconTint="@drawable/item_select"
        android:background="@color/bottom"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="90dp"
        android:layout_marginEnd="20dp"
        app:fabSize="normal"
        android:src="@drawable/exam"/>

</RelativeLayout>